Massive UI and Info Update

--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html data-bs-theme="dark" lang="en">
+<html data-bs-theme="light" lang="en">
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Revolution</title>
     <meta name="theme-color" content="rgb(58, 59, 69)">
-    <link rel="canonical" href="https://yukiarimo.github.io/solo-leveling/">
-    <meta property="og:url" content="https://yukiarimo.github.io/solo-leveling/">
-    <meta name="twitter:image" content="https://yukiarimo.github.io/solo-leveling/assets/img/solo-leveling.png">
-    <meta name="twitter:title" content="Solo Leveling">
-    <meta property="og:image" content="https://yukiarimo.github.io/solo-leveling/assets/img/solo-leveling.png">
-    <meta property="og:title" content="Solo Leveling">
+    <meta name="twitter:title" content="French Revolution">
+    <meta property="og:title" content="French Revolution">
     <meta name="description" content="System for self leveling up">
     <meta property="og:type" content="website">
     <meta property="og:description" content="System for self leveling up">
@@ -28,7 +23,10 @@
     </script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/awesome.css">
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon.ico">
+    <!--
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function () {
@@ -44,13 +42,14 @@
                     });
             });
         }
-    </script>
+    </script>-->
 </head>
 
-<body data-bs-theme="dark" class="bg-dark text-light">
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<body data-bs-theme="light" class="bg-light text-light">
+    <div class="bg-image" style="background-image: url('assets/img/bg.png');"></div>
+    <nav class="navbar navbar-default sticky-top navbar-expand-lg bg-primary" data-bs-theme="light">
         <div class="container-fluid">
-            <a class="navbar-brand">French Revolution</a>
+            <a class="navbar-brand text-white" href="/">French Revolution</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
                 aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -58,18 +57,16 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarColor01">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active">Home
-                            <span class="visually-hidden">(current)</span>
-                        </a>
+                        <a class="nav-link text-white active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Features</a>
+                        <a class="nav-link text-white" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Magazine</a>
+                        <a class="nav-link text-white" href="#">Magazine</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">About</a>
+                        <a class="nav-link text-white" href="#">About</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +78,8 @@
     </nav>
 
     <div class="container">
-        <h1>The Storming of the Bastille: A Symbol of Tyranny Falls</h1>
+        <h1 class="text-center mt-3 card border-dark card-success">The Storming of the Bastille: A Symbol of Tyranny
+            Falls</h1>
 
         <div class="card border-dark mb-3" style="max-width: 20rem;">
             <div class="card-header">July 14, 1789</div>
@@ -98,69 +96,95 @@
             </div>
         </div>
 
-        <div class="editorial">
-            <h1>Editorial</h1>
-            <h2>The Estates System: A Catalyst for Revolution</h2>
+        <div class="alert border-dark alert-success mb-3">
+            <h1 class="text-center">Editorial</h1>
+
+            <h2 class="text-center">The Estates System: A Catalyst for Revolution</h2>
 
             <p>The Estates System, an archaic social stratification, has perpetuated inequality within French society,
-                cleaving it into three disparate classes: the clergy and nobility of the First and Second Estates, and
-                the Third Estate encompassing the rest—artisans, farmers, laborers. This inequitable division of
+                cleaving it into three disparate classes: the clergy and nobility of the First and Second Estates and
+                the Third Estate encompassing the rest are artisans, farmers, and laborers. This inequitable division of
                 privileges has ignited the revolutionary fervor among the Third Estate, burdened by excessive taxation
                 and lacking political representation. It is imperative to abolish this outdated system and establish a
                 society founded on egalitarian principles.</p>
-        </div>
 
-        <div class="letter">
-            <div class="alert alert-warning">
-                <a class="list-group-item list-group-item-action flex-column align-items-start active">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">From the Desk of a Parisian Baker: The Bread Shortage Crisis</h5>
-                        <small class="text-muted">3 days ago</small>
-                    </div>
-                    <p class="mb-1">As a Parisian baker, I am intimately acquainted with the hardships faced by our
-                        community. The bread
-                        shortage has ravaged our livelihoods and stoked the fires of unrest. The exorbitant prices and
-                        scarcity
-                        of bread, a fundamental element of our sustenance, have pushed the populace to the edge. In
-                        these
-                        desperate times, the call for revolution grows louder, driven not by malice but by an urgent
-                        need for
-                        survival and reform..</p>
-                    <small class="text-muted">Letter to the Editor.</small>
+            <div class="alert alert-warning p-3 mb-3">
+                <a href="#" class="text-decoration-none">
+                    <h5>From the Desk of a Parisian Baker: The Bread Shortage Crisis</h5>
                 </a>
+
+                <p class="small text-muted mb-0">3 days ago</p>
+
+                <p>As a Parisian baker, I am intimately acquainted with the hardships faced by our community. The bread
+                    shortage has ravaged our livelihoods and stoked the fires of unrest. The exorbitant prices and
+                    scarcity
+                    of bread, a fundamental element of our sustenance, have pushed the populace to the edge. In these
+                    desperate times, the call for revolution grows louder, driven not by malice but by an urgent need
+                    for
+                    survival and reform.</p>
+
+                <p class="small text-muted">Letter to the Editor.</p>
             </div>
         </div>
 
-        <div class="psa">
-            <h1>Public Service Announcement</h1>
-            <h2>Join the National Assembly!</h2>
+        <div class="alert border-dark alert-success mb-3">
+            <h1 class="text-center">Public Service Announcement</h1>
+            <h2 class="text-center">Join the National Assembly!</h2>
 
-            <div class="alert alert-info">
+            <div class="alert alert-danger">
                 <h4 class="alert-heading">Warning!</h4>
                 <p class="mb-0">Citizens of France! The dawn of a new era is upon us. The National Assembly emerges as a
                     symbol of hope for all who yearn for fair representation and a say in our nation's governance. We
                     call upon you to join us in forging a Republic that honors the contributions of each citizen.
-                    Together, we shall chart a course toward liberty and justice for all.<a class="alert-link">vel
-                        scelerisque nisl consectetur et</a>.</p>
+                    Together, we shall chart a course toward liberty and justice for all.</p>
             </div>
         </div>
 
-        <div class="cartoon">
-            <h2>Political Cartoon</h2>
-
-            <div class="card mb-3">
-                <h3 class="card-header">King Louis XVI</h3>
-                <div class="card-body">
-                    <h5 class="card-title">Special title</h5>
-                    <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+        <div class="card mb-3 bg-secondary-subtle">
+            <div class="row g-0">
+                <div class="col-md-4 d-flex align-items-center justify-content-center">
+                    <img src="assets/img/king.jpg" class="img-fluid" alt="King Louis XVI" style="max-height: 300px;">
                 </div>
-                <img src="assets/img/king.jpg" class="img-fluid" alt="Responsive image">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                </div>
-                <div class="card-footer text-muted">
-                    2 days ago
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h2 class="card-header">The Weight of the Crown</h2>
+                        <h3 class="card-title">King Louis XVI: A Monarch of Contradictions</h3>
+                        <h5 class="card-title">The Last King of France Before the Revolution</h5>
+                        <h6 class="card-subtitle text-muted">A Glimpse into the Ancien Régime</h6>
+                        <p class="card-text">
+                            King Louis XVI, born Louis-Auguste, ascended to the throne in 1774, inheriting a kingdom
+                            burdened with debt and on the brink of revolution. Despite his well-rounded education and
+                            interest in enlightenment ideas, Louis XVI found himself ill-prepared for the monumental
+                            task of reforming the French state and society. His reign, marked by indecisiveness and
+                            perceived ineptitude, culminated in the French Revolution—a period of radical social and
+                            political upheaval.
+                        </p>
+                        <p class="card-text">
+                            The political cartoon "Le peuple sous l'ancien Regime" vividly illustrates the burdensome
+                            relationship between the monarchy and the common people, depicting Louis XVI, alongside a
+                            bishop and a member of the aristocracy, riding on the back of a man representing the
+                            oppressed populace[1]. This imagery captures the essence of the grievances that fueled the
+                            revolutionary fervor of 1789.
+                        </p>
+                        <p class="card-text">
+                            Louis XVI's attempts at reform, including the summoning of the Estates-General in 1789, were
+                            too little too late. The escalating crisis led to his arrest and eventual execution by
+                            guillotine in 1793, marking the end of monarchical rule in France and the rise of the French
+                            Republic[2]. His death not only symbolized the fall of the Ancien Régime but also served as
+                            a cautionary tale of the perils of disconnect between a ruler and his subjects.
+                        </p>
+                        <p class="card-text">
+                            The legacy of Louis XVI is complex, embodying the contradictions of a man who was at once a
+                            king, a husband, a father, and a prisoner of his circumstances. His fascination with
+                            locksmithing and the sciences, alongside his sponsorship of exploratory missions, such as
+                            the first manned hot air balloon flight, highlight a monarch with interests far beyond the
+                            confines of his royal duties[2][5].
+                        </p>
+                        <p class="card-text">
+                            Today, Louis XVI remains a figure of intrigue and debate among historians, symbolizing the
+                            end of an era and the painful birth of modern France.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
